[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypso-hyperspectral-labeling"
version = "0.1.0"
description = "GUI tool for labeling HYPSO hyperspectral scenes"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "napari[all]",
  "pyqtgraph",
  "qtpy",
  "scikit-learn",
  
  "hypso==2.1.2",
  "hypso1_calibration==0.0.1",
  "hypso2_calibration==0.0.1",
]

[project.scripts]
hypso-label = "hypso_labeler.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
